<resources>

    <!-- App title -->
    <string name="app_name">PINsafe resolver</string>
    <string name="otc_title">Last OneTimeCode (OTC)</string>
    <string name="pinsafe_setting_remember">TIP: Use settings button to set your PINsafe</string>

    <!-- PINsafe dialog -->
    <string name="pinsafe_update_title">Update your PINsafe</string>
    <string name="pinsafe_sms_sender_label">SMS Sender</string>
    <string name="pinsafe_sms_sender_description">Sender name of secured PINSafe SMS</string>
    <string name="pinsafe_sms_sender_hint">Pulse</string>
    <string name="pinsafe_code_label">PINSafe Code</string>
    <string name="pinsafe_code_label_description">Current PINSafe to decode OTC (4 length)</string>
    <string name="pinsafe_code_hint">1234</string>
    <string name="pinsafe_update_button">Update</string>
    <string name="pinsafe_cancel_button">Cancel</string>
    <string name="pinsafe_updated_message">PINsafe updated</string>
    <string name="pinsafe_invalid_message">Error invalid PINsafe</string>

    <!-- Permission dialog -->
    <string name="permission_alert_dialog_title">Requesting SMS permission</string>
    <string name="permission_dialog_message">The app will now request your permission to read SMS related services.</string>
    <string name="permission_dialog_ok_button">OK</string>

</resources>
